refactor(server): tighten in-process-sync code and de-duplicate its tests
Self-review pass over this session's changes for KISS/DRY/functional style and
test redundancy — no behavior change.

Production:
- deleteOrphanedClassOutputs: replace the side-effecting stream
  (mapToInt(deleteClassOutputs).sum()) with an explicit loop, per the "no
  side-effects in streams" rule; hoist the resolved root out of the loop and
  collapse the two empty-guards.
- Extract nonGeneratedSourceRoots(config) — the "source roots minus the
  annotation-processor output" filter shared by the staleness scan and the
  deletion cleanup — removing the duplicated predicate.

Tests:
- Merge the two CompiledStamps.prune tests into one (drop-named + ignore-unknown).
- Merge the chain and diamond upstreamFirst tests into one ordering test.
- Fold the weak no-prompt-on-external-change test into the deterministic
  reconcileNow recompile test (which now also asserts no Maven prompt fired),
  dropping the redundant, misleadingly-named duplicate.

Full lathe-server suite green (1129).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>